--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "@tanstack/router-plugin": "^1.121.2",
     "better-auth": "^1.3.4",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "lucide-react": "^0.539.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
