--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "start": "vite --port 3000",
     "build": "vite build && tsc",
     "serve": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -42,6 +44,7 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
+    "prettier": "^3.6.2",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
